{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 692,
  "lineage": "7750f83f-73e9-71c5-38db-81566add1319",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ee4df451840fa9d",
            "arn": "arn:aws:ec2:us-west-2:567168357526:instance/i-0711dc7332d4caf99",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0711dc7332d4caf99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed750330704ff7e1",
            "private_dns": "ip-10-0-3-123.us-west-2.compute.internal",
            "private_ip": "10.0.3.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3ceead032ffe0e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fd1c62e6377990f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2bf160ca38cd440",
            "tags": {
              "Name": "ec2-private-subnet"
            },
            "tags_all": {
              "Name": "ec2-private-subnet"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd1c62e6377990f5"
            ]
          },
          "dependencies": [
            "module.groups.aws_security_group.private",
            "module.network.aws_subnet.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0032ea5ae08aa27a2",
            "arn": "arn:aws:ec2:us-west-2:567168357526:instance/i-0d7f73d8eedc862aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7f73d8eedc862aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-060233ec5a11be5b2",
            "private_dns": "ip-10-0-5-145.us-west-2.compute.internal",
            "private_ip": "10.0.5.145",
            "public_dns": "ec2-35-89-141-188.us-west-2.compute.amazonaws.com",
            "public_ip": "35.89.141.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-00b2fbf49211173a4",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00f1ab05788a0655c",
            "tags": {
              "Name": "public-nat-bastion"
            },
            "tags_all": {
              "Name": "public-nat-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-008a47617548ce836",
              "sg-0c89a2450e4ff8367"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-nat-to",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-099876ffd564b9d161080289494",
            "instance_id": "i-0d7f73d8eedc862aa",
            "instance_owner_id": "567168357526",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-060233ec5a11be5b2",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099876ffd564b9d16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.instance_public_nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:security-group/sg-0fd1c62e6377990f5",
            "description": "private-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd1c62e6377990f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.5.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.5.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.5.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "567168357526",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:security-group/sg-0c89a2450e4ff8367",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c89a2450e4ff8367",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "567168357526",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24",
              "10.0.5.0/24"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2014774698",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd1c62e6377990f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24",
              "10.0.5.0/24"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3823150619",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd1c62e6377990f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24",
              "10.0.5.0/24"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2809767135",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd1c62e6377990f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-728003055",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fd1c62e6377990f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1358472353",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c89a2450e4ff8367",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3229931603",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c89a2450e4ff8367",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3866294548",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c89a2450e4ff8367",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3824413782",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c89a2450e4ff8367",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:567168357526:loadbalancer/app/lb/f7ebdc623f5af241",
            "arn_suffix": "app/lb/f7ebdc623f5af241",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-2099544598.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:567168357526:loadbalancer/app/lb/f7ebdc623f5af241",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb",
            "security_groups": [
              "sg-0c89a2450e4ff8367"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f1ab05788a0655c"
              },
              {
                "subnet_id": "subnet-0f82763cb9294a15a"
              }
            ],
            "subnets": [
              "subnet-00f1ab05788a0655c",
              "subnet-0f82763cb9294a15a"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-070e89c7a901fee16",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.groups.aws_security_group.public",
            "module.network.aws_subnet.public_1",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:567168357526:listener/app/lb/f7ebdc623f5af241/67ae6f80899778ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:567168357526:targetgroup/loadbalancer/6d8015527bca178a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:567168357526:listener/app/lb/f7ebdc623f5af241/67ae6f80899778ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:567168357526:loadbalancer/app/lb/f7ebdc623f5af241",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.groups.aws_security_group.public",
            "module.lb.aws_lb.lb",
            "module.lb.aws_lb_target_group.tg-loadbalancer",
            "module.network.aws_subnet.public_1",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:567168357526:targetgroup/loadbalancer/6d8015527bca178a",
            "arn_suffix": "targetgroup/loadbalancer/6d8015527bca178a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:567168357526:targetgroup/loadbalancer/6d8015527bca178a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "loadbalancer",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:internet-gateway/igw-02354b35ea261eda2",
            "id": "igw-02354b35ea261eda2",
            "owner_id": "567168357526",
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d43ca5fd228c55b7",
            "original_route_table_id": "rtb-072396d77fcb9adc0",
            "route_table_id": "rtb-099876ffd564b9d16",
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:route-table/rtb-099876ffd564b9d16",
            "id": "rtb-099876ffd564b9d16",
            "owner_id": "567168357526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0d7f73d8eedc862aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-060233ec5a11be5b2",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-able"
            },
            "tags_all": {
              "Name": "private-route-able"
            },
            "timeouts": null,
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:route-table/rtb-0e511c0d34b6692f1",
            "id": "rtb-0e511c0d34b6692f1",
            "owner_id": "567168357526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02354b35ea261eda2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to-private-1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b180de076916a7d4",
            "route_table_id": "rtb-099876ffd564b9d16",
            "subnet_id": "subnet-0a2bf160ca38cd440"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to-private-2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c458ba817159b619",
            "route_table_id": "rtb-099876ffd564b9d16",
            "subnet_id": "subnet-04ed819d2a5b97bcc"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to-public-1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e515f26d02202e3b",
            "route_table_id": "rtb-0e511c0d34b6692f1",
            "subnet_id": "subnet-00f1ab05788a0655c"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to-public-2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d26f21ada1819eb7",
            "route_table_id": "rtb-0e511c0d34b6692f1",
            "subnet_id": "subnet-0f82763cb9294a15a"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:subnet/subnet-0a2bf160ca38cd440",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2bf160ca38cd440",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "567168357526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_1"
            },
            "tags_all": {
              "Name": "private_1"
            },
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:subnet/subnet-04ed819d2a5b97bcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ed819d2a5b97bcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "567168357526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_2"
            },
            "tags_all": {
              "Name": "private_2"
            },
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:subnet/subnet-00f1ab05788a0655c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f1ab05788a0655c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "567168357526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-1"
            },
            "tags_all": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:subnet/subnet-0f82763cb9294a15a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f82763cb9294a15a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "567168357526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-2"
            },
            "tags_all": {
              "Name": "subnet-public-2"
            },
            "vpc_id": "vpc-070e89c7a901fee16"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:567168357526:vpc/vpc-070e89c7a901fee16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f6640198ffd9af5",
            "default_route_table_id": "rtb-099876ffd564b9d16",
            "default_security_group_id": "sg-008a47617548ce836",
            "dhcp_options_id": "dopt-05d8a588a79342269",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-070e89c7a901fee16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099876ffd564b9d16",
            "owner_id": "567168357526",
            "tags": {
              "name": "my custom vpc"
            },
            "tags_all": {
              "name": "my custom vpc"
            }
          }
        }
      ]
    }
  ]
}